--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "config": [
     {
-      "gridBorderVisibility": true,
+      "gridBorderVisibility": false,
       "gridBorderWidth": 1,
       "gridBorderColor": "#555",
       "titleFont": "Arial"
