--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "mongodb":"1.2.14",
     "monk": "0.7.1",
-    "express": "3.1.0"
+    "express": "3.1.0",
+    "requestify": "*"
   }
 }
